test/kobra-code/syntax-errors/next-line-return-value-2.ks
fn double(n):
  $ doubled = n * 2

  return
  doubled
end